2001-03-06  Steve Youngs  <youngs@xemacs.org>

	* Version 0.2.10 released.

	* eicq.el: Re-arrange variables and constants for a clean build.
	(eicq-version): Increment.
	(eicq-bridge-filename): Change default to /usr/local/bin/udp2tcp
	(eicq-browse-homepage): Autoload it.

	* eicq-user-install.sh (RCFILE): Change default to
	/usr/local/lib/xemacs/site-packages/etc/eicq/world.

	* eicq-report.el: Update doc strings.

	* eicq-toolbar.el: Ditto.
	(eicq-icon-directory): Change default to
	/usr/local/lib/xemacs/site-packages/etc/eicq/

	* infohack: New file.

	* README: Update URL.

	* INSTALL: Updated to reflect not being an XEmacs Package.

	* Makefile: Complete re-write to use standard 'make', 'make install'.

2001-03-02  Steve Youngs  <youngs@xemacs.org>

	* Makefile: Re-shuffle the order of the variables so everything
	gets installed properly.  This supercedes the change I made earlier.

	* INSTALL: Update.

	* NEWS: Ditto.

	* TODO: Ditto.

	* Makefile (ELCS): Add eicq-report.elc.
	(include ../../XEmacs.rules): Move to below other variables so
	everything gets installed properly.

	* eicq-toolbar.el: Add require 'eicq.

2001-03-01  Steve Youngs  <youngs@xemacs.org>

	* Makefile (REQUIRES): Add eicq, gnus.

	* eicq.el (eicq-blurb): New
	(eval-when-compile): Remove require 'eicq-report.

	* udp2tcp.cc (main): Update URL.

2001-02-28  Ben Wing  <ben@xemacs.org>

	* udp2tcp.cc (main): Conditionalize change to third arg to accept
	on __CYGWIN__, so that all other systems keep size_t -- simply
	changing the arg makes this not compile under Linux.

2001-02-24  Ben Wing  <ben@xemacs.org>

	* Makefile (STRIP):
	* Makefile (EXTRA_SOURCES):
	* Makefile (EXTRA_OBJS):
	Fix udp2tcp compilation to work under MS Windows.
	
	* udp2tcp.cc (main):
	Emergency fixes so it compiles. (change bzero to memset; fix type
	of third arg to accept)

2001-03-01  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-main-menu): Capitalise entries.
	(eicq-log-menu): Ditto.
